--- a/popup.html
+++ b/popup.html
@@ -12,21 +12,6 @@
   <p id="count">Loading...</p>
   <button id="reset">Reset Counter</button>
 
-  <script>
-    function updateCount() {
-      chrome.storage.local.get(['videoCount'], (data) => {
-        const count = data.videoCount || 0;
-        document.getElementById('count').textContent = `Videos watched: ${count}`;
-      });
-    }
-
-    document.getElementById('reset').addEventListener('click', () => {
-      chrome.storage.local.set({ videoCount: 0 }, () => {
-        updateCount();
-      });
-    });
-
-    updateCount();
-  </script>
+  <script src="popup.js"></script>
 </body>
 </html>
