adding below screen display for time content

--- a/popup.html
+++ b/popup.html
@@ -30,10 +30,10 @@
       font-size: 24px;
       margin-bottom: 20px;
     }
-    #count {
+    #count, #time {
       font-size: 18px;
       color: #444;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
     button {
       padding: 10px 20px;
@@ -61,8 +61,9 @@
 
   <div class="container">
     <h3>YouTube Binge Tracker</h3>
-    <p id="count">Loading...</p>
-    <button id="reset" class="reset-btn">Reset Counter</button>
+    <p id="count">Videos watched: Loading...</p>
+    <p id="time">Time spent: Loading...</p>
+    <button id="reset" class="reset-btn">Reset Stats</button>
   </div>
 
   <script src="popup.js"></script>
